slurm_output/old/slurm-48420203.out
compute-a-17-80.o2.rc.hms.harvard.edu
  File "multithreading.py", line 64
    processes.append(p)
            ^
SyntaxError: invalid syntax
